# pyxu-diffops

./: .pre-commit-config.yaml  LICENSE  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  references.html  search.html  searchindex.js  sg_execution_times.html  tox.ini
.github/workflows/: documentation.yml
_downloads/9029f349dcba6220309b295a9140982b/: operator-2.py
_downloads/c722cabc6093f717e47975d57ffbc907/: operator-5.py
_modules/: index.html
_modules/pyxu_diffops/operator/diffusion/: diffusion.html
_sources/: index.rst  references.rst
_sources/api/: operator.rst
_sources/examples/: GALLERY_HEADER.rst
_static/: documentation_options.js
_static/css/: custom.css
api/: index.html  operator.html
doc/: conf.py  index.rst
doc/api/: index.rst  operator.rst
doc/examples/: index.rst
examples/: GALLERY_HEADER.html  index.html  placeholder.html  sg_execution_times.html
examples/images/: GALLERY_HEADER.html  index.html  sg_execution_times.html
plot_directive/api/: operator-1.py  operator-3.py  operator-4.py  operator-6.py
src/pyxu_diffops/: __init__.py
src/pyxu_diffops/operator/: __init__.py
src/pyxu_diffops/operator/diffusion/: __init__.py  _diffusion.py  _diffusion_coeff.py  _diffusivity.py  _extra_diffusion_term.py  diffusion.py  doc_plots.py  new_diffops_check.py  new_linop_interface.py  test.py  time_structure_tensor.py
src/pyxu_diffops_tests/test_operator/: test_diffusion.py
