[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

# Metadata ====================================================================
[project]
name = "pyxu_diffops"
dynamic = ["version"]
description = "Plugin to use diffusion operators for image reconstruction"
readme = "README.rst"
requires-python = ">= 3.10, < 3.13"
license = "MIT"
authors = [
    { name = "Daniele Hamm", email = "daniele.hamm@epfl.ch" },
]
classifiers = [
    "Framework :: Pycsou",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.download = "https://github.com/dhamm97/pyxu-diffops"
dependencies = [
    # "pyxu >= 2.0, < 3",
    "pyxu",
]

# entry_points; Note the `_` underscore to overload a base Pyxu class.
[project.entry-points."pyxu.operator"]
Flip = "pyxu_diffops:Flip"
_NullFunc = "pyxu_diffops:NullFunc"


# Optional dependencies =======================================================
[project.optional-dependencies]
dev = [ "pyxu[dev]", ]

# Get version info from Git ===================================================
[tool.hatch.version]
source = "vcs"

# sdist/wheel config ==========================================================
[tool.hatch.build]
exclude = [
    "/dev",
    "/doc",
    "/src/pyxu_diffops_tests",
]
include = [
    "/src",
]
packages = [
    "src/pyxu_diffops",
]